8310130: C2: assert(false) failed: scalar_input is neither phi nor a matchin reduction